<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    app:layoutDescription="@xml/activity_main_scene"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/show_details_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:elevation="10dp"
        android:src="@drawable/baseline_more_vert_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/back_arrow_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:elevation="10dp"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/top_profile_background"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/top_profile_background_color" />

    <TextView
        android:id="@+id/profile_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:elevation="10dp"
        android:text="@string/profile_name_text"
        android:textColor="@color/primary_text_color"
        android:textSize="@dimen/profile_name_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/the_chance_photo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profile_subscribers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:elevation="10dp"
        android:text="@string/_819_subscribers"
        android:textColor="@color/secondary_text_color"
        android:textSize="@dimen/normal_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/the_chance_photo"
        app:layout_constraintTop_toBottomOf="@+id/profile_name_text" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/the_chance_photo"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/the_chance_photo"
        android:elevation="1dp"
        android:src="@drawable/gradient_background"
        app:layout_constraintBottom_toBottomOf="@+id/top_profile_background"
        app:layout_constraintStart_toStartOf="@id/top_profile_background"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/the_chance_photo_small"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:elevation="1dp"
        android:background="@drawable/the_chance_photo"
        app:layout_constraintBottom_toBottomOf="@+id/top_profile_background"
        app:layout_constraintStart_toStartOf="@id/top_profile_background"
        app:layout_constraintTop_toTopOf="parent"
        app:roundPercent="1"
        android:visibility="gone" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/secondary_background"
        app:layout_constraintTop_toBottomOf="@id/top_profile_background">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/info_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/info"
            android:textColor="@color/primary_blue"
            android:textSize="@dimen/small_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/profile_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/profile_link"
            android:textColor="@color/primary_text_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info_text" />

        <TextView
            android:id="@+id/Invite_link_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/invite_link_hint"
            android:textColor="@color/secondary_text_color"
            android:textSize="@dimen/small_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_link" />

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Invite_link_hint" />

        <ImageView
            android:id="@+id/qr_code_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/baseline_qr_code_24"
            app:layout_constraintBottom_toTopOf="@+id/view"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/my_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <TextView
            android:id="@+id/notifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/notifications"
            android:textColor="@color/primary_text_color"
            app:layout_constraintBottom_toTopOf="@id/switch_stats"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <TextView
            android:id="@+id/switch_stats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/off"
            android:textColor="@color/secondary_text_color"
            android:textSize="@dimen/small_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notifications" />

        <View
            android:layout_width="1dp"
            android:layout_height="32dp"
            android:layout_marginEnd="16dp"
            android:background="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/my_switch"
            app:layout_constraintTop_toBottomOf="@+id/view" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_profile_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/secondary_background"
        app:layout_constraintTop_toBottomOf="@id/info">

        <TextView
            android:id="@+id/media"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/media"
            android:textColor="@color/primary_blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/files"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/files"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/files"
            android:textColor="@color/secondary_text_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/links"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/media"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/links"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/links"
            android:textColor="@color/secondary_text_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/files"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/media" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    




</androidx.constraintlayout.motion.widget.MotionLayout>